# flink-rocksdb-plugins

./: .gitignore  CMakeLists.txt  Makefile  README.md
java/: pom.xml
java/src/main/java/org/rocksdb/: FlinkCompactionFilter.java  FlinkNativeLibraryLoader.java  StringAppendOperatorWithVariableDelimitor.java
java/src/test/java/org/rocksdb/: FlinkCompactionFilterTest.java  StringAppendOperatorWithVariableDelimitorTest.java
scripts/: build-linux-centos.sh  build-linux-docker.sh  build-win.bat  build.sh  docker-build-linux-centos.sh  generate-lib.bat  get_rocksdb_dependency.sh
src/: flink_compaction_filter.cc  flink_compaction_filter_test.cc  flink_compactionfilterjni.cc  log.cc  org_rocksdb_FlinkCompactionFilter.h  org_rocksdb_StringAppendOperatorWithVariableDelimitor.h  stringappend_delim.cc  stringappend_delim.h  stringappend_delim_jni.cc
